# WavemeterPublisher

./: ResonanceStillGrowing.csv  SinglePortViewer.py  SinglePortViewer2.py  SinglePortViewer_ForDerick.py  WavemeterAndSwitcherTest.py  WavemeterPublisher.py  WavemeterPublisher_old.py  client_class.py  client_class2.py  client_test.py  exampleServerGUI.pyw  exampleServerGUI.pyw - Shortcut.lnk  liveHistogramWidget.py  pyBristolSCPI.py  pyproject.toml  realResonanceTypeBehavior.csv  runServerAndGUI.pyw  server_test.py  spectroscopyDAQ.py  wmPlotterGUI.py  wmPlotterGUI2.py  wmPlotterGUI_ForDerick.py  wmServer.py  wmServerGUI.py  wmServerGUI.pyw  wmServerGUI.pyw - Shortcut.lnk
2026_05_18_tests/: Channel_1_logFile1.csv  camTstream_ovenBlocked.csv
2026_05_21_WmLockTests/: analyzeLockTimeStreams.py  logFile_399Locked.csv  logFile_399Relocked.csv  logFile_399Unlocked.csv
Scans/: generateSpectra.py
Scans/Scan0/: Scan0Timestream.csv  finalSpectrum0.csv
Scans/Scan1/: Scan1Timestream.csv  finalSpectrum1.csv
Scans/Scan10/: Scan10Timestream.csv  finalSpectrum10.csv
Scans/Scan11/: Scan11Timestream.csv  finalSpectrum11.csv
Scans/Scan12/: Scan12Timestream.csv  (+1 more)
config/: 369Config.json  switcherConfig.json
initial_PID_tests/: analyzeLockTimeStreams.py  logFile5.csv  logFile6.csv  logFile_399relocked.csv
wmLib/: SinglePortViewer_ForDerick.py  client_class.py  digital.py  exampleServerGUI.pyw  wmPlotterGUI.pyw  wmPlotterGUI_ForDerick.py  wmServer.py  wmServerGUI.py  wmServerGUI.pyw  wmServer_origPID.py
wmLib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+50 files in other folders)
